--- a/RaportetMjedisore/App.config
+++ b/RaportetMjedisore/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-
+<connectionStrings>
+    <add name="myDatabaseConnection" connectionString="server=192.168.0.16;user id=dardani;database=raportet_komunale;password=Dr3n4sdr3n4s" />
+  </connectionStrings>
     <startup> 
 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
-  <connectionStrings>
-    <add name="myDatabaseConnection" connectionString="server=192.168.100.7;user id=dardan;persistsecurityinfo=True;database=raportet_komunalepassword=Dr3n4sdr3n4s;" />
-  </connectionStrings>
+  
 </configuration>
